[gd_scene load_steps=9 format=2]

[ext_resource path="res://titleScreens/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://titleScreens/dryer.png" type="Texture" id=2]
[ext_resource path="res://effects/dryerNoise.ogg" type="AudioStream" id=3]
[ext_resource path="res://effects/blackSquare.png" type="Texture" id=4]
[ext_resource path="res://characters/socko.png" type="Texture" id=5]
[ext_resource path="res://effects/coffeestain.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]

resource_name = "launchLevel1"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("DryerSprite/Camera2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -131.98 ), Vector2( 0, -131.98 ), Vector2( 0, -61.12 ), Vector2( 0, -61.12 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("DryerSprite/Camera2D:zoom")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.3, 0.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AudioStreamPlayer2D:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -31.57, -11.28 ]
}

[sub_resource type="Animation" id=2]

length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("DryerSprite/Camera2D:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 8, 8 ), Vector2( 0.8, 0.8 ) ]
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("DryerSprite/Camera2D:offset:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("DryerSprite/Camera2D:offset:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0.5 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("DryerSprite/Camera2D:offset:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("DryerSprite/Camera2D:offset:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -131.98, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("BlackSquare:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="DryerSprite" type="TextureRect" parent="."]
margin_left = -334.0
margin_top = -486.0
margin_right = 334.0
margin_bottom = 460.0
texture = ExtResource( 2 )
expand = true

[node name="Camera2D" type="Camera2D" parent="DryerSprite"]
position = Vector2( 334.226, 449.168 )
offset = Vector2( 0, -131.98 )
current = true
zoom = Vector2( 8, 8 )

[node name="StartButton" type="Button" parent="."]
margin_left = -311.349
margin_top = -471.117
margin_right = -32.3486
margin_bottom = -351.117
custom_colors/font_color = Color( 0, 0.121569, 0.239216, 1 )
custom_colors/font_color_hover = Color( 0, 0.529412, 1, 1 )
flat = true

[node name="ExitButton" type="Button" parent="."]
margin_left = 40.0
margin_top = -480.0
margin_right = 114.0
margin_bottom = -379.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/launchLevel1 = SubResource( 1 )
anims/start = SubResource( 2 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -1.15866, 0.971649 )
stream = ExtResource( 3 )
volume_db = -31.57

[node name="Level1StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label" type="Label" parent="."]
margin_left = -373.203
margin_top = -420.226
margin_right = -70.2035
margin_bottom = -347.226
rect_pivot_offset = Vector2( -76.7865, -0.771454 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "A Game by Plexsoup
for the Tenth 
Creative Game Jam
"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = -317.0
margin_top = -287.0
margin_right = -208.0
margin_bottom = -247.0
rect_pivot_offset = Vector2( 115.491, 25.6506 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
text = "BG Music from
jukedeck.com"

[node name="BlackSquare" type="Sprite" parent="."]
visible = false
scale = Vector2( 30, 30 )
texture = ExtResource( 4 )

[node name="Sockie" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.537255 )
position = Vector2( 3.849, -69.3979 )
rotation = 0.919789
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )
flip_h = true

[node name="Stain" type="Sprite" parent="Sockie"]
self_modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 157.263, 169.641 )
rotation = -0.919789
scale = Vector2( 0.73, 0.77 )
texture = ExtResource( 6 )

[node name="Stain2" type="Sprite" parent="Sockie"]
self_modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 206.01, -69.6987 )
rotation = -0.919789
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Stain3" type="Sprite" parent="Sockie"]
self_modulate = Color( 1, 1, 1, 0.501961 )
position = Vector2( 114.434, -172.821 )
rotation = -0.326377
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[connection signal="gui_input" from="DryerSprite" to="." method="_on_DryerSprite_gui_input"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="timeout" from="Level1StartTimer" to="." method="_on_Level1StartTimer_timeout"]
